Change parameter properties from List to Set